perf: fix image size to prevent the layout shift and change png to webp

--- a/src/features/products/components/Product/Product.module.css
+++ b/src/features/products/components/Product/Product.module.css
@@ -12,6 +12,8 @@
 
 .product__image {
   align-self: center;
+  width: 160px;
+  height: 243px;
 }
 
 .product__category {
