--- a/src/features/products/components/ProductInfoDialog/ProductInfoDialog.module.css
+++ b/src/features/products/components/ProductInfoDialog/ProductInfoDialog.module.css
@@ -21,6 +21,11 @@
   padding: 50px 100px;
 }
 
+.product-thumbnail {
+  width: 160px;
+  height: 243px;
+}
+
 .form-root {
   display: flex;
   flex-direction: column;
